trunk/Archive2/4b/ca8c4882794689/output
main.cpp:2:5: error: redefinition of ‘int a’
 int a = 0;
     ^
main.cpp:1:5: note: ‘int a’ previously defined here
 int a = 0;
     ^
