trunk/Archive2/4b/ca8c4882794689/main.cpp
int a = 0;
int a = 0;
